editor/src/app/components/library-page/library-page.component.scss
.right-rail {
  .modal-footer {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width: 1200px) {
  .left-rail,
  .right-rail {
    position: sticky;
    top: 4rem;
    z-index: 1000;
    overflow-y: auto;
  }

  .left-rail {
    order: 0;
    height: calc(100vh - 14rem);
    transition: max-width 0.3s;

    :host-context(.scrolled-down) & {
      height: calc(100vh - 9rem);
    }
    :host-context(.has-unsubmitted-changes) & {
      height: calc(100vh - 14rem - 50px);
    }
    :host-context(.has-unsubmitted-changes.scrolled-down) & {
      height: calc(100vh - 9rem - 50px);
    }

    &.collapsed {
      max-width: 60px;
      overflow: hidden;

      scl-download-panel,
      scl-filter-panel,
      scl-quiz {
        visibility: hidden;
      }
    }
  }
  .right-rail {
    order: 2;
    height: calc(100vh - 12rem);

    :host-context(.scrolled-down) & {
      height: calc(100vh - 8rem);
    }
    :host-context(.has-unsubmitted-changes) & {
      height: calc(100vh - 12rem - 50px);
    }
    :host-context(.has-unsubmitted-changes.scrolled-down) & {
      height: calc(100vh - 8rem - 50px);
    }

    &.col-xl-5.extended {
      flex: 0 0 44%;
      max-width: 44%;
    }
  }
}

main {
  order: 1;
}

.breadcrumb {
  margin-bottom: 0;
  flex-wrap: nowrap;
  max-width: calc(100vw - 30px);
}

.breadcrumb-item {
  // overflow: hidden;
  // text-overflow: ellipsis;
  white-space: nowrap;
}

.collapse-button {
  position: fixed;
  bottom: 30px;
  left: 8px;
  z-index: 1032;
}

.sidebar-icon {
  line-height: 1;
}

:host-context(.has-unsubmitted-changes) {
  .collapse-button {
    bottom: 86px;
  }
}

[data-toggle="collapse"] {
  display: flex;
  align-items: center;
  &::before {
    display: inline-block;
    padding-right: 1.5rem;
    width: 1.25em;
    line-height: 0;
    content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgb%28173,173,173%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
    transition: transform 0.35s ease;
    transform-origin: 0.5em 50%;
  }
  &[aria-expanded="true"]::before {
    transform: rotate(90deg);
  }
}

@media (max-width: 767px) {
  .breadcrumb-item + .breadcrumb-item::before {
    content: "" !important;
    padding-right: 0 !important;
  }
}

